@@ -1,3 +1,7 @@
+2014-10-01  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Rest/Labels.pm, perl/Amanda/Rest/Storages/Labels.pm
+	  (list): add filter on datestamp.
+
 2014-09-30  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/file.c (debug_agets): Fix parsing of comment.
 
